@@ -20,12 +20,13 @@
 
 # $Id$
 
+import veusz.document as document
+import veusz.setting as setting
+import veusz.utils as utils
+
 import plotters
 import widget
 import graph
-import document
-import setting
-import utils
 
 class Key(widget.Widget):
     """Key on graph."""
